--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.rohan</groupId>
     <artifactId>contactUs</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>contactUs</name>
     <description>contactUs</description>
     <url/>
